--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -39,7 +39,7 @@
                       <label for="" class="col-sm-1 control-label">价格</label>
                       <div class="col-sm-2">
                         <div class="form-inline">
-                          <input class="form-control" name="copItem.price" readonly value="${copItem.price}">
+                          <input class="form-control" name="copItem.price" #{if !isEdit} readonly #{/if} value="${copItem.price}">
                         #{pickCurrency name:'copItem.currency', c:copItem.currency, class:'form-control'/}
                         </div>
                       </div>
