* 修复采购单更新错误

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -36,7 +36,7 @@
             <td>
               <span id="deliverymentId">${dmt.id}</span>
               <input type="hidden" name="dmt.id" value="${dmt.id}">
-              <input type="hidden" name="dmt.id" value="${paymentId}" id="paymentId">
+              <input type="hidden" value="${paymentId}" id="paymentId">
             </td>
 
             <th>State</th>
