分拆采购计划保存税点字段

--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -94,12 +94,12 @@
   </td>
   <th>是否含税</th>
   <td>
-    <select class="form-control" name="unit.containTax" style="width:80px;">
+    <select class="form-control" name="newUnit.containTax" style="width:80px;">
       <option #{if unit.containTax} selected #{/if} value="true">是</option>
       <option #{if !unit.containTax} selected #{/if} value="false">否</option>
     </select>
     <span id="taxSpan">#{if unit.taxPoint>0}税点：${unit.taxPoint} #{/if}</span>
-    <input type="hidden" id="taxPointInput" value="0" name="unit.taxPoint">
+    <input type="hidden" id="taxPointInput" value="0" name="newUnit.taxPoint">
   </td>
 </tr>
 <tr>
