user index页面显示总数

--- a/core/app/views/Users/index.html
+++ b/core/app/views/Users/index.html
@@ -1,5 +1,5 @@
 #{extends 'main_full_v3.html'/}
-#{set title:'用户管理界面 (' + users.size() + ')'/}
+#{set title:'用户管理界面 (' + p.totalCount + ')'/}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'component/notify.coffee'/}
